--- a/colmar/resources/style.css
+++ b/colmar/resources/style.css
@@ -1,1 +1,409 @@
+.header {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid LightGray;
+  height: 4rem;
+  z-index: 1;
+}
+
+.header .logo {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  margin-left: 1.5rem;
+}
+
+#logo-text {
+  font-size: 1.25rem;
+  color: Gray;
+}
+
+#logo-text strong {
+  color: black;
+}
+
+.header nav {
+  margin-right: 1.5rem;
+}
+
+.nav a {
+  margin-left: 1rem;
+  text-decoration: none;
+  color: #404040;
+  transition: all 400ms;
+}
+
+.nav a:hover {
+  background-color: #ffffcc;
+}
+
+.nav a:active {
+  color: black;
+  background-color: #ffff66;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v16/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Roboto Bold'), local('Roboto-Bold'), url(https://fonts.gstatic.com/s/roboto/v16/d-6IYplOFocCacKzxwXSOJBw1xU1rKptJj_0jans920.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
+html {
+  font-size: 24px;
+}
+
+body {
+  background-color: white;
+  font-family: "Roboto", Arial, sans-serif;
+}
+
+strong {
+  font-weight: bold;
+}
+
+p {
+  color: #666666;
+  font-size: 0.8rem;
+  line-height: 1.6;
+  transition: all 400ms;
+}
+
+.blue {
+  color: #1E90FF;
+}
+
+.credit {
+  color: #666666;
+  font-size: 0.7rem;
+  line-height: 1;
+}
+
+h1 {
+  color: #404040;
+  font-size: 2rem;
+  line-height: 1.125;
+  font-weight: bold;
+}
+
+h2 {
+  color: #404040;
+  font-size: 1.75rem;
+  line-height: 1.125;
+  font-weight: bold;
+}
+
+h3 {
+  color: #404040;
+  font-size: 1.2rem;
+  line-height: 1.125;
+  transition: all 300ms;
+}
+
+.banner {
+  display: flex;
+  position: relative;
+  top: 4rem;
+  align-items: center;
+  background-color: LightGray;
+}
+
+.banner-image {
+  width: 60%;
+  margin: 2rem 1.5rem;
+}
+
+.banner-image img {
+  width: 100%;
+  height: auto;
+}
+
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 40%;
+}
+
+.banner-text {
+  margin-left: 1rem;
+}
+
+.banner-text h1 {
+  margin: 2rem 1.5rem 2rem 0;
+}
+
+.banner-text p {
+  font-size: 1.125rem;
+  margin-bottom: 0;
+  color: #404040;
+}
+
+.banner-button {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  width: 16rem;
+  max-width: 86%;
+  padding: 0.5rem 0;
+  margin: 1.5rem 1.5rem 2rem 1rem;
+  text-decoration: none;
+  background-color: #404040;
+  color: white;
+  transition: all 300ms;
+}
+
+.banner-button:hover {
+  background-color: black;
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.24), 0 5px 15px 0 rgba(0, 0, 0, 0.19);
+}
+
+.banner-button:active {
+  color: #ffff66;
+  box-shadow: 0 -10px 15px 0 rgba(255, 255, 102, 0.5), 0 10px 15px 0 rgba(255, 255, 102, 0.5);
+}
+
+.features {
+  display: flex;
+  position: relative;
+  top: 4rem;
+}
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 2rem 1.5rem;
+}
+
+.quote-image {
+  width: 100%;
+}
+
+.quote-image img {
+  width: 100%;
+  height: auto;
+}
+
+.quote-content {
+  margin-top: 2rem;
+}
+
+.quote-content h2 {
+  margin-bottom: 1.5rem;
+}
+
+.quote-content .credit {
+  margin-top: 2rem;
+}
+
+.stories {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 40%;
+  padding-top: 1rem;
+  border-left: 1px solid LightGray;
+}
+
+.features .stories .story:first-child {
+  border-style: none;
+}
+
+.features .stories .story:last-child {
+  border-style: none;
+  margin-bottom: 1rem;
+}
+
+.story {
+  display: flex;
+  border-top: 1px solid LightGray;
+  border-bottom: 1px solid LightGray;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.story:hover {
+  background-color: LightGray;
+}
+
+.story:active {
+  background-color: #404040;
+}
+
+.story:active h3, .story:active p {
+  color: LightGray;
+}
+
+.story-image {
+  max-width: 35%;
+  height: auto;
+  margin: 1rem;
+}
+
+.story-image img {
+  width: 100%;
+  height: auto;
+}
+
+.story-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 65%;
+  margin-right: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.story-content p {
+  margin: 0.5rem 0;
+}
+
+.story-content p.blue {
+  margin: 0;
+}
+
+.learning {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  top: 4rem;
+  background-color: LightGray;
+}
+
+.learning h2 {
+  margin-top: 2rem;
+}
+
+.courses {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1rem 3.5rem;
+}
+
+.course {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 29%;
+  flex-grow: 1;
+  background-color: white;
+  margin: 1rem;
+  min-width: 29%;
+  transition: all 300ms;
+}
+
+.course:hover {
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.24), 0 5px 15px 0 rgba(0, 0, 0, 0.19);
+}
+
+.course:active {
+  box-shadow: 0 -5px 15px 0 rgba(127, 255, 0, 0.5), 0 5px 15px 0 rgba(127, 255, 0, 0.5);
+  background-color: #404040;
+}
+
+.course:active h3, .course:active span, .course:active p {
+  color: Chartreuse;
+}
+
+.course-image {
+  width: 100%;
+  height: auto;
+}
+
+.course-image img {
+  width: 100%;
+  height: auto;
+}
+
+.course-content {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 1rem 1.5rem 1rem;
+}
+
+.course-content span {
+  color: #666666;
+  font-size: 0.8rem;
+  line-height: 1.6;
+  padding: 0.5rem 0;
+  transition: all 500ms;
+}
+
+.thesis {
+  position: relative;
+  top: 4rem;
+}
+
+.thesis h2 {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.thesis-content {
+  display: flex;
+}
+
+.video-section {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 2rem 1.5rem;
+}
+
+.video {
+  width: 100%;
+}
+
+.video video {
+  width: 100%;
+  height: auto;
+}
+
+.video-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 1.5rem;
+}
+
+.video-content h3 {
+  margin-bottom: 0.5rem;
+}
+
+.thesis-content .stories, .thesis-content .stories .story {
+  border-style: none;
+}
+
+.thesis-content .stories .story:first-child {
+  margin-top: 1rem;
+}
+
+
+footer {
+  display: flex;
+  position: relative;
+  top: 4rem;
+  padding: 1rem 1.5rem;
+  border-top: 1px solid LightGray;
+}
+
+footer span {
+  flex-grow: 1;
+}
 
